# bitmarket

./: README.md  docker-compose.yml  init.sql  migration.sql  package-lock.json
backend/: index.js  package-lock.json  package.json
backend/src/: server.ts
backend/src/config/: database.ts
backend/src/controllers/: betController.ts  liquidityController.ts  marketController.ts
backend/src/models/: Bet.ts  Liquidity.ts  Market.ts
backend/src/routes/: betRoutes.ts  liquidityRoutes.ts  marketRoutes.ts
backend/src/scripts/: initDb.ts
frontend/: README_XVERSE_SETUP.md  i18n.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/api/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/cookies/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/help/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/market/: page.tsx
frontend/src/app/markets/: page.tsx
frontend/src/components/: Footer.tsx  Header.tsx  LiveStats.tsx  MarketCard.tsx  MarketCarousel.tsx  NotificationSystem.tsx  TestWallet.tsx  TransactionStatus.tsx  WalletBalance.tsx
frontend/src/context/: WalletContext.tsx
frontend/src/i18n/: request.ts
frontend/src/lib/: utils.ts
frontend/src/messages/: en.json  es.json  pt.json
frontend/src/services/: bitcoinService.ts
indexer/: Cargo.toml  README.md
indexer/src/: bitcoin_rpc.rs  config.rs  db.rs  main.rs  protocol.rs
(+12 files in other folders)
